# siem

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: schema.sql
siem/: alerting.py  api.py  collector.py  config.py  detection.py  models.py  parser.py  storage.py
siem/web/: index.html
tests/: test_detection.py  test_parser.py
tools/: replay.py  simulate.py
