[project]
name = "siem"
version = "0.1.0"
description = "A small self-built SIEM: syslog ingestion, detection rules, alerting, and a live dashboard."
requires-python = ">=3.13,<3.14"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
